restructured button group with modal for z-index bug

--- a/app/routes/CreateSet/CreateSet.scss
+++ b/app/routes/CreateSet/CreateSet.scss
@@ -19,10 +19,13 @@
 }
 
 .CreateSetPage {
-	margin-top: 5rem;
-	margin-left: 1rem;
-	min-width: 790px; 
+	margin-top: 5rem!important;
+	min-width: 790px;
+	max-width: 1100px;
+	display: table;
+	margin: 0 auto;
 	opacity: 0;
+	z-index: 1;
 	-webkit-transform: translateY(5px);
 	-moz-transform: translateY(5px);
 	-ms-transform: translateY(5px);
@@ -425,21 +428,40 @@ hr.CreateSetBreak {
 // /*Button group*/
 .CreateSetHeader-wrapper-buttongroup {
 	position: absolute;
-	z-index: 501;
-	right: 15px;
-	top: -20px;
-}
-.push-right {
-    display: inline-block;
-    position: absolute;
-    right: 0;
-    bottom: 10px;
+	height: 100%;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	overflow: visible;
+	opacity: 0;
+	// z-index: 2;
+	-webkit-transform: translateY(5px);
+	-moz-transform: translateY(5px);
+	-ms-transform: translateY(5px);
+	transform: translateY(5px);
+	-moz-transition: opacity 150ms cubic-bezier(.2,.8,.5,1) .1s,transform 150ms cubic-bezier(.2,.8,.5,1) .1s,top 0s linear 150ms;
+	transition: opacity 150ms cubic-bezier(.2,.8,.5,1) .1s,transform 150ms cubic-bezier(.2,.8,.5,1) .1s,top 0s linear 150ms;
+	-webkit-transition: opacity 150ms cubic-bezier(.2,.8,.5,1) .1s,-webkit-transform 150ms cubic-bezier(.2,.8,.5,1) .1s,top 0s linear 150ms;
+	&.rendered {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+		-moz-transform: translateY(0);
+		-ms-transform: translateY(0);
+		transform: translateY(0);
+		-moz-transition: opacity 150ms cubic-bezier(.2,.8,.5,1) .1s,transform 150ms cubic-bezier(.2,.8,.5,1) .1s,left 150ms ease-in-out;
+		transition: opacity 150ms cubic-bezier(.2,.8,.5,1) .1s,transform 150ms cubic-bezier(.2,.8,.5,1) .1s,left 150ms ease-in-out;
+		-webkit-transition: opacity 150ms cubic-bezier(.2,.8,.5,1) .1s,-webkit-transform 150ms cubic-bezier(.2,.8,.5,1) .1s,left 150ms ease-in-out;
+	}
 }
 .Button-set {
-	// line-height: 44px;
 	display: inline-block;
 	white-space: nowrap;
 	vertical-align: top;
+	position: absolute;
+	right: 45px;
+	top: 10px;
+	// z-index: 3;
 }
 .Button-set .button {
 	vertical-align: middle;
